--- a/index.html
+++ b/index.html
@@ -13,33 +13,38 @@
                 <p id="motto">Your one-stop shop for all types of sinks</p>
             </div>
 
+            <header id="header-nav">
+                <nav class="nav">
+                    <nav>
+                        <a href="#">Home</a>
+                        <a href="#">About Us</a>
+                        <a href="#">Types of Sinks</a>
+                        <a href="#">Features</a>
+                        <a href="#">Contact Us</a>
+                    </nav>
+            </header>
 
-            <nav class="nav">
-                <nav>
-                    <a href="#">Home</a>
-                    <a href="#">About Us</a>
-                    <a href="#">Types of Sinks</a>
-                    <a href="#">Features</a>
-                    <a href="#">Contact Us</a>
-                </nav>
+            <section class="main-container">
+                <div id="about-container">
+                    <img src="images/sink1.jpg" alt="Sink Image" width="100%" height="auto">
+                    <h2>About Our Sinks</h2>
+                    <p>At Sinks R Us, we offer a wide variety of sinks to suit every need. From classic designs to modern styles, our sinks are made from high-quality materials and built to last.</p>
+                </div>
 
-            <div class="about-content" style="padding: 10px;">
-                <img src="images/sink1.jpg" alt="Sink Image" width="100%" height="auto">
-                <h2>About Our Sinks</h2>
-                <p>At Sinks R Us, we offer a wide variety of sinks to suit every need. From classic designs to modern styles, our sinks are made from high-quality materials and built to last.</p>
-            </div>
-            <div class="types-content" style="padding: 10px;">
-                <img src="images/sink2.jpg" alt="Sink Image" width="100%" height="auto">
-                <h2>Types of Sinks</h2>
-                <p>Explore our extensive range of sinks, including undermount, farmhouse, and vessel sinks. Each type comes with its own unique features and benefits to match your kitchen or bathroom design.</p>
-            </div>
-            <div class="feature-content" style="padding: 10px;" colspan="2">
+                <div id="types-container">
+                    <img src="images/sink2.jpg" alt="Sink Image" width="100%" height="auto">
+                    <h2>Types of Sinks</h2>
+                    <p>Explore our extensive range of sinks, including undermount, farmhouse, and vessel sinks. Each type comes with its own unique features and benefits to match your kitchen or bathroom design.</p>
+                </div>
+
+                <div id="feature-container">
                     <img src="images/sink3.jpeg" alt="Sink Features" width="100%" height="auto">
                     <h2>Features and Benefits</h2>
                     <p>Our sinks come with a range of features, including easy-to-clean surfaces, scratch resistance, and various styles to complement your decor. Learn more about what makes our sinks stand out.</p>
-            </div>
+                </div>
+            </section>
         </body>
 </html>
-<footer colspan="2" style="background-color: #cccccc; text-align: center; padding: 10px;">
+<footer>
     <p>&copy; 2024 Sinks R Us</p>
 </footer>
