--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <body>
 
             <div class="heading-content">
-                <h1 id="heading-name">Sinks R Us</h1>
-                <p id="motto">Your one-stop shop for all types of sinks</p>
+                <h1>Sinks R Us</h1>
+                <p>Your one-stop shop for all types of sinks</p>
             </div>
 
             <header id="header-nav">
@@ -26,19 +26,19 @@
 
             <section class="main-container">
                 <div id="about-container">
-                    <img src="images/sink1.jpg" alt="Sink Image" width="100%" height="auto">
+                    <img src="images/sink1.jpg" alt="Sink Image">
                     <h2>About Our Sinks</h2>
                     <p>At Sinks R Us, we offer a wide variety of sinks to suit every need. From classic designs to modern styles, our sinks are made from high-quality materials and built to last.</p>
                 </div>
 
                 <div id="types-container">
-                    <img src="images/sink2.jpg" alt="Sink Image" width="100%" height="auto">
+                    <img src="images/sink2.jpg" alt="Sink Types">
                     <h2>Types of Sinks</h2>
                     <p>Explore our extensive range of sinks, including undermount, farmhouse, and vessel sinks. Each type comes with its own unique features and benefits to match your kitchen or bathroom design.</p>
                 </div>
 
                 <div id="feature-container">
-                    <img src="images/sink3.jpeg" alt="Sink Features" width="100%" height="auto">
+                    <img src="images/sink3.jpeg" alt="Sink Features">
                     <h2>Features and Benefits</h2>
                     <p>Our sinks come with a range of features, including easy-to-clean surfaces, scratch resistance, and various styles to complement your decor. Learn more about what makes our sinks stand out.</p>
                 </div>
