Unfinished codes for the website

--- a/index.html
+++ b/index.html
@@ -24,25 +24,31 @@
                     </nav>
             </header>
 
-            <section class="main-container">
-                <div id="about-container">
-                    <img src="images/sink1.jpg" alt="Sink Image">
-                    <h2>About Our Sinks</h2>
-                    <p>At Sinks R Us, we offer a wide variety of sinks to suit every need. From classic designs to modern styles, our sinks are made from high-quality materials and built to last.</p>
+            <div class="main-container">
+                <div class="about-container">
+                    <div class="about-content">
+                        <img src="images/sink1.jpg" alt="Sink Image">
+                        <h2>About Our Sinks</h2>
+                        <p>At Sinks R Us, we offer a wide variety of sinks to suit every need. From classic designs to modern styles, our sinks are made from high-quality materials and built to last.</p>
+                    </div>
                 </div>
 
-                <div id="types-container">
-                    <img src="images/sink2.jpg" alt="Sink Types">
-                    <h2>Types of Sinks</h2>
-                    <p>Explore our extensive range of sinks, including undermount, farmhouse, and vessel sinks. Each type comes with its own unique features and benefits to match your kitchen or bathroom design.</p>
+                <div class="types-container">
+                    <div class="types-content">
+                        <img src="images/sink2.jpg" alt="Sink Types">
+                        <h2>Types of Sinks</h2>
+                        <p>Explore our extensive range of sinks, including undermount, farmhouse, and vessel sinks. Each type comes with its own unique features and benefits to match your kitchen or bathroom design.</p>
+                    </div>
                 </div>
 
-                <div id="feature-container">
-                    <img src="images/sink3.jpeg" alt="Sink Features">
-                    <h2>Features and Benefits</h2>
-                    <p>Our sinks come with a range of features, including easy-to-clean surfaces, scratch resistance, and various styles to complement your decor. Learn more about what makes our sinks stand out.</p>
+                <div class="feature-container">
+                    <div class="feature-content">
+                        <img src="images/sink3.jpeg" alt="Sink Features">
+                        <h2>Features and Benefits</h2>
+                        <p>Our sinks come with a range of features, including easy-to-clean surfaces, scratch resistance, and various styles to complement your decor. Learn more about what makes our sinks stand out.</p>
+                    </div>
                 </div>
-            </section>
+            </div>
         </body>
 </html>
 <footer>
